# 16-Bits-de-Historia

./: .gitignore  CMakeLists.txt  Makefile  README.md  audio.c  compile.md  game.html  game.js  game.wasm  index.html  main.c  main.code-workspace
assets/Collisions/: col_room1.txt  col_room2.txt  col_room3.txt
assets/Tiled/: mapa.tiled-session
assets/Tiled/tmx/: mapa.tmx
assets/Tiled/tsx/: Fences.tsx  Grass.tsx  Water.tsx  personaje.tsx
audio/Music/: desktop.ini
src/: main.c
src/components/: animation.c  cine.c  debug.c  enemy.c  graphics.c  grid.c  keybinds.c  level.c  menu.c  npc.c  object.c  player.c  sound.c
src/headers/: animation.h  cine.h  debug.h  enemy.h  graphics.h  grid.h  keybinds.h  level.h  menu.h  npc.h  object.h  player.h  sound.h
web/: game.wasm
